--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Joseph Yeager",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3"
   }
 }
